--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
 	        <artifactId>mapstruct</artifactId>
 	        <version>${org.mapstruct.version}</version>
 	    </dependency>
+	    
+	    <dependency>
+		    <groupId>org.modelmapper.extensions</groupId>
+		    <artifactId>modelmapper-spring</artifactId>
+		    <version>3.0.0</version>
+        </dependency>
 		
 	</dependencies>
 	<dependencyManagement>
