--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+server.port=0
+spring.application.name=ALBUM-SERVICE
+
+eureka.client.serviceUrl.defaultZone = http://localhost:8010/eureka
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+spring.devtools.restart.enabled = true
+
+logging.file.name=ALBUM-SERVICE.log
